<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayFragment">

    <ScrollView
        android:id="@+id/SV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/TVName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_last_name" />

            <EditText
                android:id="@+id/editTextNom"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/preview_name" />

            <TextView
                android:id="@+id/TVLast_Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_last_name" />

            <EditText
                android:id="@+id/editTextLastName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/preview_last_name" />

            <TextView
                android:id="@+id/TVVille"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_department" />

            <Spinner
                android:id="@+id/spinnerVille"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/departments" />

            <TextView
                android:id="@+id/TVVillePays3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_birth_date" />

            <TextView
                android:id="@+id/textDateNaissance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/TVVillePays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/text_birth_city" />

            <EditText
                android:id="@+id/editTextVille"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/preview_birth_city" />

            <TextView
                android:id="@+id/textTel1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textTel1" />

            <EditText
                android:id="@+id/editTextTel1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/preview_phone" />

            <TextView
                android:id="@+id/textTel2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textTel2" />

            <EditText
                android:id="@+id/editTextTel2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/preview_phone" />

            <TextView
                android:id="@+id/textTel3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/textTel3" />

            <EditText
                android:id="@+id/editTextTel3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="text"
                android:text="@string/preview_phone" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/butValidate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/validate" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>