<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

<ScrollView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/x"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingTop="20dp"
            android:paddingRight="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:id="@+id/LLmainSon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/LL1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/TV1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_last_name" />

                    <EditText
                        android:id="@+id/ETT"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/preview_last_name"
                        android:inputType="text" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LL2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="20dp">

                    <TextView
                        android:id="@+id/TV2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_name" />

                    <EditText
                        android:id="@+id/ETT2"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/preview_name"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LL4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="20dp">

                    <TextView
                        android:id="@+id/TV4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_birth_city" />

                    <EditText
                        android:id="@+id/ETT4"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/preview_birth_city"
                        android:inputType="text" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LL6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingTop="20dp">

                    <TextView
                        android:id="@+id/TV5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_department" />


                    <Spinner
                        android:id="@+id/departement"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:entries="@array/departments" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LL7"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="20dp">

                    <TextView
                        android:id="@+id/TV6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_birth_date" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/TVDateDisplay"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <Button
                            android:id="@+id/button"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="20dp"
                            android:text="@string/date_button" />
                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LL5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:includeFontPadding="false"
                        android:text="@string/button_tel"
                        android:textSize="12sp" />

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutTel"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"></LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingTop="20dp">

                <Button
                    android:id="@+id/button3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/validate" />

                <Button
                    android:id="@+id/BDisplay"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/go_display" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>